fix; posts spacing fix

--- a/src/components/Posts/posts.module.css
+++ b/src/components/Posts/posts.module.css
@@ -26,6 +26,7 @@
 .item {
     @media (--ktl-tl-min) {
         display: flex;
+        width: 100%;
     }
 }
 
